[workspace]
members = [
    "programs/dubuu_marketplace_mvp"
]
resolver = "2" # Uses the version 2 feature resolver for Cargo

# Build profiles apply to all workspace members, including your on-chain program.
# The 'release' profile is used by `anchor build`.
[profile.release]
overflow-checks = true  # Crucial for catching integer overflows
lto = "fat"             # Link Time Optimization for smaller and faster binaries
codegen-units = 1       # Can improve optimization but slows down compilation
# You can also add panic = "abort" if you want to ensure no panic unwinding,
# though Solana programs usually abort on panic anyway.
# panic = "abort"

# Optional: Override build settings for dependencies if needed
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
