[package]
name = "dubuu_marketplace_mvp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dubuu_marketplace_mvp"

[features]
default = ["init-if-needed", "idl-build"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["idl-build"] }
